--- a/Task4/dashboard.html
+++ b/Task4/dashboard.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="dashboard_style.css" />
 </head>
 <body>
     <div id="header">
@@ -65,7 +65,7 @@
       </div>
   
       <div class="content">
-        <div class="container-1">
+        <div class="container_1">
           <div class="upperpart">
             <img src="images/imageMask.png" />
             <div class="text">
@@ -93,7 +93,7 @@
           </div>
         </div>
   
-        <div class="container-1">
+        <div class="container_1">
           <div class="upperpart">
             <img src="images/imageMask-1.png" />
             <div class="text">
@@ -120,7 +120,7 @@
           </div>
         </div>
   
-        <div class="container-1">
+        <div class="container_1">
           <div class="upperpart">
             <img src="images/imageMask-3.png" />
             <div class="text">
@@ -151,14 +151,14 @@
           </div>
         </div>
   
-        <div class="container-1 container-2">
+        <div class="container_1 container_2">
           <div class="expire">EXPIRED</div>
           <div class="upperpart">
             <img src="images/imageMask-2.png" />
             <div class="text">
               <div class="head">
                 <h5>Introduction to High School Mathematics</h5>
-                <img src="images/favourite.svg" class="img-effect" />
+                <img src="images/favourite.svg" class="img_effect" />
               </div>
               <p>
                 Mathematics <span></span> Grade 8 <span class="green">+3</span>
@@ -189,6 +189,6 @@
           </p>
         </div>
       </div>
-      <script src="index.js"></script>
+      <script src="dash.js"></script>
 </body>
 </html>
